--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,3 +2,9 @@ yarnPath: .yarn/releases/yarn-4.0.2.cjs
 nmMode: hardlinks-local
 nodeLinker: node-modules
 enableGlobalCache: false
+
+supportedArchitectures:
+  os:
+    - "current"
+  cpu:
+    - "current"
