--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "ncc build src/index.ts --minify --license licenses.txt"
+    "build": "esbuild src/index.ts --bundle --minify --platform=node --format=esm --target=node20 --outfile=dist/index.mjs"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@types/node": "^20.9.0",
-    "@vercel/ncc": "^0.38.1",
+    "esbuild": "^0.19.5",
     "typescript": "^5.2.2"
   }
 }
