--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --platform=node --format=esm --target=node20 --outfile=dist/index.mjs"
+    "build": "esbuild src/index.ts --bundle --minify --platform=node --target=node20 --outfile=dist/index.js"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
