--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -13,7 +13,9 @@ jobs:
     name: Prepare Release
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
+    permissions: 
+      contents: write
+      pull-requests: write
     steps:
       - name: checkout
         uses: actions/checkout@v4
