Update release workflow and add auto-commit action

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -56,27 +56,39 @@ jobs:
           snapshot: true
           no_push: true
 
-      - name: create pull request
-        uses: peter-evans/create-pull-request@v5
+      - name: commit changes
+        id: auto-commit-action
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit-message: release ${{ github.event.inputs.version }}
-          title: "release: ${{ github.event.inputs.version }}"
-          body: Update likec4 version to ${{ github.event.inputs.likec4 || 'latest' }}
+          # Optional. Commit message for the created commit.
+          # Defaults to "Apply automatic changes"
+          commit_message: "release: ${{ github.event.inputs.version }}"
+          # Optional. Local and remote branch name where commit is going to be pushed
+          #  to. Defaults to the current branch.
+          #  You might need to set `create_branch: true` if the branch does not exist.          
+          tagging_message: ${{ github.event.inputs.version }}
           branch: release/${{ github.event.inputs.version }}
-          base: main           
+          create_branch: true
+          push_options: '--force'
+          skip_dirty_check: true
 
-      # - name: commit changes
-      #   uses: stefanzweifel/git-auto-commit-action@v5
+      - name: repository dispatch - Release
+        if: steps.auto-commit-action.outputs.changes_detected == 'true'
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          event-type: release
+          client-payload: '{"ref": "refs/heads/release/${{ github.event.inputs.version }}", "version": "${{ github.event.inputs.version }}"}'
+
+      # - name: create pull request
+      #   uses: peter-evans/create-pull-request@v5
       #   with:
-      #     # Optional. Commit message for the created commit.
-      #     # Defaults to "Apply automatic changes"
-      #     commit_message: "release ${{ github.event.inputs.version }}"
-      #     # Optional. Local and remote branch name where commit is going to be pushed
-      #     #  to. Defaults to the current branch.
-      #     #  You might need to set `create_branch: true` if the branch does not exist.
+      #     commit-message: release ${{ github.event.inputs.version }}
+      #     title: "release: ${{ github.event.inputs.version }}"
+      #     body: Update likec4 version to ${{ github.event.inputs.likec4 || 'latest' }}
       #     branch: release/${{ github.event.inputs.version }}
-      #     create_branch: true
-      #     push_options: '--force'
+      #     base: main           
+
+
             
       # - name: Start ${{ matrix.images.environment }} Deployment
       #   uses: bobheadxi/deployments@v1.4.0
@@ -99,4 +111,4 @@ jobs:
       # We use ^{} to recursively deference the tag to get the commit the tag is pointing at.
       # Then, we use that reference to create new tags, so that the new tags point to the commit
       # the original tag was pointing to, and not to the original tag.
-      # This notation is documented at https://git-scm.com/docs/gitrevisions#Documentation/gitrevisions.txt-emltrevgtemegemv0998em
+      # This notation is documented at https://git-scm.com/docs/gitrevisions#Documentation/gitrevisions.txt-emltrevgtemegemv0998em      
