--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.ref }}
+          fetch-tags: true
 
       - name: build docker
         uses: elgohr/Publish-Docker-Github-Action@v5
