--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,14 @@
 name: test
+
 on:
   push:
     branches:
+      - main
       - "release/*"
+
+concurrency:
+  group:  ${{ github.workflow }}-${{github.event_name}}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true      
 
 jobs:
   test:
