--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -21,6 +21,7 @@ jobs:
     permissions: 
       contents: write
       packages: write
+      pull-requests: write
     steps:
       - uses: tibdex/github-app-token@v2
         id: likec4-bot
