--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,27 +1,53 @@
 name: release
 
 on:
-  repository_dispatch:
-    types: [release]
+  push:
+    tags:
+      - "v*"
 
 jobs:
-  release:
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    name: release
+
+  build-package:
+    name: build package
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    permissions: 
+    permissions:
       contents: write
       deployments: write
       packages: write
+      actions: write
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
+      # - uses: wow-actions/use-app-token@v2
+      #   id: likec4-bot
+      #   with:
+      #     app_id: ${{ secrets.BOT_APP_ID }}
+      #     private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: start deployment
+        uses: bobheadxi/deployments@v1
+        id: deployment
         with:
-          ref: ${{ github.event.client_payload.ref }}
+          step: start
+          token: ${{ secrets.GITHUB_TOKEN }}
+          env: release          
+
+      # - id: tag
+      #   run: |
+      #     # "Set the tag name..."
+      #     REF=$(printf "%q" "${{ github.ref }}")
+      #     VERSION=${REF/refs\/tags\/v/}
+      #     echo "version={value}" >> "$GITHUB_OUTPUT"
+      #     echo "::set-output name=tag::$(eval printf "%s" "$TAG")"
+      #   shell: bash    
+
+      - name: checkout
+        uses: actions/checkout@v4  
+        with:
+          # token: ${{ env.BOT_TOKEN }}
+          fetch-depth: 0      
           fetch-tags: true
 
-      - name: build docker
+      - name: build package
         uses: elgohr/Publish-Docker-Github-Action@v5
         with:
           name: ${{ github.repository }}
@@ -29,47 +55,64 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           buildoptions: "--force-rm"
+          tag_names: true
+
+      - name: update deployment status
+        uses: bobheadxi/deployments@v1
+        if: always()
+        with:
+          step: finish
+          password: ${{ env.BOT_TOKEN }}
+          status: ${{ job.status }}
+          env: ${{ steps.deployment.outputs.env }}
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}                    
+ 
+  github-release:
+    name: github release
+    needs: [build-package]
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: write
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: create release
         env:
-          RELEASE_VERSION: ${{ github.event.client_payload.version }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NOTES: ${{ github.event.head_commit.message }}
         run: |
-          gh release create ${RELEASE_VERSION} --draft --title ${RELEASE_VERSION}          
+          gh release create ${GITHUB_REF_NAME} --title ${GITHUB_REF_NAME} --notes "${NOTES}"
           
+  move-tags:
+    name: move tags
+    needs: [build-package]
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: write
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
-      # - name: commit changes
-      #   uses: stefanzweifel/git-auto-commit-action@v5
-      #   with:
-      #     # Optional. Commit message for the created commit.
-      #     # Defaults to "Apply automatic changes"
-      #     commit_message: "release ${{ github.event.inputs.version }}"
-      #     # Optional. Local and remote branch name where commit is going to be pushed
-      #     #  to. Defaults to the current branch.
-      #     #  You might need to set `create_branch: true` if the branch does not exist.
-      #     branch: release/${{ github.event.inputs.version }}
-      #     create_branch: true
-      #     push_options: '--force'
-            
-      # - name: Start ${{ matrix.images.environment }} Deployment
-      #   uses: bobheadxi/deployments@v1.4.0
-      #   id: deployment
-      #   with:
-      #     step: start
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     env: ${{ matrix.images.environment }}
+      - name: parse semver
+        id: semver_parser 
+        uses: booxmedialtd/ws-action-parse-semver@v1
+        with:
+          input_string: ${{ github.ref }}
+          version_extractor_regex: '\/v(.*)$' 
 
-      # # We don't rebuild the image to avoid that the latest tag and the release tags don't point to what the release tag is pointing to.
-      # # Instead, we pull the latest image and tag it.
-      # - name: Retag and Push Images
-      #   uses: akhilerm/tag-push-action@v2.1.0
-      #   with:
-      #     src: ghcr.io/likec4/actions-export:latest
-      #     dst: |
-      #       ghcr.io/github/super-linter:${{ matrix.images.prefix }}v5
-      #       ghcr.io/github/super-linter:${{ matrix.images.prefix }}${{ env.RELEASE_VERSION }}
-
-      # We use ^{} to recursively deference the tag to get the commit the tag is pointing at.
-      # Then, we use that reference to create new tags, so that the new tags point to the commit
-      # the original tag was pointing to, and not to the original tag.
-      # This notation is documented at https://git-scm.com/docs/gitrevisions#Documentation/gitrevisions.txt-emltrevgtemegemv0998em
+      - name: move tags
+        run: |
+          MAJOR="v${{ steps.semver_parser.outputs.major }}"          
+          git tag -fa $MAJOR -m "update ${MAJOR} tag"
+          git push origin $MAJOR --force
+          
+          MINOR="${MAJOR}.${{ steps.semver_parser.outputs.minor }}"
+          git tag -fa $MINOR -m "update ${MINOR} tag"
+          git push origin $MINOR --force
