--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,17 @@ on:
   push:
     branches:
       - main
-      - "release/*"
+    tags-ignore:
+      - '**'
+    # - "release/*"
+    # paths:
+    #   - "action.yml"
+    #   - "Dockerfile"
+    #   - "src/**"
+
 
 concurrency:
-  group:  ${{ github.workflow }}-${{github.event_name}}-${{ github.head_ref || github.ref }}
+  group:  ${{ github.workflow }}-${{github.event_name}}-${{ github.ref }}
   cancel-in-progress: true      
 
 jobs:
