--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: check for tag
         run: |
           TAG="${{ github.event.inputs.version }}"
-          if git show-ref --tags --verify --quiet "refs/tags/${TAG}"; then
+          if [ "$(git tag -l "${TAG}")"  ]; then
             echo "::error::Tag ${TAG} exists"
           fi          
 
@@ -68,31 +68,31 @@ jobs:
           snapshot: true
           no_push: true
 
-      - id: commit-message
-        shell: bash
-        run: |
-          {
-            echo 'value<<EOF'
-            echo 'release: ${{ github.event.inputs.version }}'
-            echo 'likec4 version: ${{ github.event.inputs.likec4 }}'
-            echo EOF
-          } >> "$GITHUB_OUTPUT"
+      # - id: commit-message
+      #   shell: bash
+      #   run: |
+      #     {
+      #       echo 'value<<EOF'
+      #       echo 'release: ${{ github.event.inputs.version }}'
+      #       echo 'likec4 version: ${{ github.event.inputs.likec4 }}'
+      #       echo EOF
+      #     } >> "$GITHUB_OUTPUT"
 
-      - name: commit changes
-        id: auto-commit-action
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          # Optional. Commit message for the created commit.
-          # Defaults to "Apply automatic changes"
-          commit_message: ${{ steps.commit-message.outputs.value }}
-          # Optional. Local and remote branch name where commit is going to be pushed
-          #  to. Defaults to the current branch.
-          #  You might need to set `create_branch: true` if the branch does not exist.          
-          tagging_message: ${{ github.event.inputs.version }}
-          # Optional commit user and author settings
-          commit_user_name: ${{ env.BOT_NAME }}
-          commit_user_email: ${{ env.BOT_NAME }}@users.noreply.github.com
-          commit_author: ${{ env.BOT_NAME }} <${{ env.BOT_NAME }}@users.noreply.github.com>
+      # - name: commit changes
+      #   id: auto-commit-action
+      #   uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     # Optional. Commit message for the created commit.
+      #     # Defaults to "Apply automatic changes"
+      #     commit_message: ${{ steps.commit-message.outputs.value }}
+      #     # Optional. Local and remote branch name where commit is going to be pushed
+      #     #  to. Defaults to the current branch.
+      #     #  You might need to set `create_branch: true` if the branch does not exist.          
+      #     tagging_message: ${{ github.event.inputs.version }}
+      #     # Optional commit user and author settings
+      #     commit_user_name: ${{ env.BOT_NAME }}
+      #     commit_user_email: ${{ env.BOT_NAME }}@users.noreply.github.com
+      #     commit_author: ${{ env.BOT_NAME }} <${{ env.BOT_NAME }}@users.noreply.github.com>
 
       # - name: repository dispatch - Release
       #   if: steps.auto-commit-action.outputs.changes_detected == 'true'
@@ -101,22 +101,22 @@ jobs:
       #     event-type: release
       #     client-payload: '{"ref": "refs/heads/release/${{ github.event.inputs.version }}", "version": "${{ github.event.inputs.version }}"}'
 
-      # - name: create pull request
-      #   uses: peter-evans/create-pull-request@v5
-      #   with:
-      #     token: ${{ env.BOT_TOKEN }}
-      #     commit-message: "release: ${{ github.event.inputs.version }}"
-      #     title: "release: ${{ github.event.inputs.version }}"
-      #     body: |
-      #       likec4 version: ${{ github.event.inputs.likec4 || 'latest' }}
-      #     branch: release/${{ github.event.inputs.version }}
-      #     base: main
-      #   env:
-      #     # Use app name in the environment variable named "BOT_NAME"
-      #     GIT_AUTHOR_NAME: ${{ env.BOT_NAME }}
-      #     GIT_AUTHOR_EMAIL: ${{ env.BOT_NAME }}@users.noreply.github.com
-      #     GIT_COMMITTER_NAME: ${{ env.BOT_NAME }}
-      #     GIT_COMMITTER_EMAIL: ${{ env.BOT_NAME }}@users.noreply.github.com                
+      - name: create pull request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ env.BOT_TOKEN }}
+          commit-message: "release: ${{ github.event.inputs.version }}"
+          title: "release: ${{ github.event.inputs.version }}"
+          body: |
+            likec4 version: ${{ github.event.inputs.likec4 || 'latest' }}
+          branch: release/${{ github.event.inputs.version }}
+          base: main
+        env:
+          # Use app name in the environment variable named "BOT_NAME"
+          GIT_AUTHOR_NAME: ${{ env.BOT_NAME }}
+          GIT_AUTHOR_EMAIL: ${{ env.BOT_NAME }}@users.noreply.github.com
+          GIT_COMMITTER_NAME: ${{ env.BOT_NAME }}
+          GIT_COMMITTER_EMAIL: ${{ env.BOT_NAME }}@users.noreply.github.com
             
       # - name: Start ${{ matrix.images.environment }} Deployment
       #   uses: bobheadxi/deployments@v1.4.0
