--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,10 @@ on:
       - main
     tags-ignore:
       - '**'
-    # - "release/*"
-    # paths:
-    #   - "action.yml"
-    #   - "Dockerfile"
-    #   - "src/**"
-
+    paths:
+      - "action.yml"
+      - "Dockerfile"
+      - "src/**"
 
 concurrency:
   group:  ${{ github.workflow }}-${{github.event_name}}-${{ github.ref }}
