Fix if condition in deploy-release job

--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -74,7 +74,7 @@ jobs:
           ls -l mmd/
 
   deploy-release:
-    if: env.IS_RELEASE == 'true'
+    if: ${{env.IS_RELEASE == 'true'}}
     needs: [test]
     name: Build Docker
     runs-on: ubuntu-latest
