--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -74,7 +74,7 @@ jobs:
           ls -l mmd/
 
   deploy-release:
-    if: ${{env.IS_RELEASE == 'true'}}
+    if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'refs/heads/release/v') 
     needs: [test]
     name: Build Docker
     runs-on: ubuntu-latest
