--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -17,30 +17,19 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4        
 
-      - name: parse semver
-        id: semver_parser 
-        uses: booxmedialtd/ws-action-parse-semver@v1
-        with:
-          input_string: ${{ github.event.pull_request.head.ref || github.head_ref }}
-          version_extractor_regex: '\/v(.*)$'
-
       - id: pr
         run: |
-          echo "v${{ steps.semver_parser.outputs.fullversion }}"
-
           HEAD_REF=$(printf "%q" "${{ github.event.pull_request.head.ref || github.head_ref }}")
-          echo "HEAD_REF=${HEAD_REF}"
           HEAD_REF=${HEAD_REF/refs\/heads\//}
           echo "HEAD_REF=${HEAD_REF}"
-          HEAD_REF=${HEAD_REF/release\//}
-          echo "HEAD_REF=${HEAD_REF}"          
+          RELEASE_REF=${HEAD_REF/release\//}
+          echo "RELEASE_REF=${RELEASE_REF}"
+          RELEASE_REF=${RELEASE_REF/v/}
+          echo "RELEASE_REF=${RELEASE_REF}"
           
-          RELEASE_VERSION=${HEAD_REF/v/}
-          echo "::debug::RELEASE_VERSION=${RELEASE_VERSION}"
-
-          echo "version=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"          
-  
-
+          RELEASE_VERSION=${HEAD_REF/release\/v/}
+          echo "RELEASE_VERSION=${RELEASE_VERSION}"
+          echo "version=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: update action.yml to build locally
         run: |
@@ -81,10 +70,10 @@ jobs:
       - run: |
           ls -l mmd/
 
-  deploy-release:
+  deploy-package:
     if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'release/v') 
     needs: [test]
-    name: Build Docker
+    name: build-package
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -133,51 +122,4 @@ jobs:
           token: ${{ env.BOT_TOKEN }}
           status: ${{ job.status }}
           env: ${{ steps.deployment.outputs.env }}
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}          
-
-  # prepare-release:
-  #   if: "github.ref == 'refs/heads/main'"
-  #   name: Prepare Release
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 10
-  #   steps:
-  #     - uses: wow-actions/use-app-token@v2
-  #       id: likec4-bot
-  #       with:
-  #         app_id: ${{ secrets.BOT_APP_ID }}
-  #         private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
-  #     - name: checkout
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-
-  #     - name: update Dockerfile
-  #       uses: jacobtomlinson/gha-find-replace@v3
-  #       with:
-  #         find: "ARG LIKEC4_VER.*"
-  #         replace: "ARG LIKEC4_VER=${{ github.event.inputs.likec4 || 'latest' }}"          
-  #         include: "Dockerfile"        
-
-  #     - name: review Dockerfile
-  #       run: cat Dockerfile
-
-  #     - name: update action.yml
-  #       uses: jacobtomlinson/gha-find-replace@v3
-  #       with:
-  #         find: ".*image\\:.*"
-  #         replace: '  image: docker://ghcr.io/${{ github.repository }}:${{ github.event.inputs.version }}'
-  #         include: "action.yml"     
-
-  #     - name: review action.yml
-  #       run: cat action.yml 
-
-  #     - name: build docker
-  #       uses: elgohr/Publish-Docker-Github-Action@v5
-  #       with:
-  #         name: ${{ github.repository }}
-  #         username: ${{ env.BOT_NAME }}[bot]
-  #         password: ${{ env.BOT_TOKEN }}
-  #         registry: ghcr.io
-  #         snapshot: true
-  #         no_push: true
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
