--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: release
+name: on-push-tag
 
 on:
   push:
@@ -62,14 +62,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          fetch-tags: true
 
       - name: create release
-        env:
+        env:          
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NOTES: ${{ github.event.head_commit.message }}
         run: |
-          gh release create ${GITHUB_REF_NAME} --title ${GITHUB_REF_NAME} --notes "${NOTES}"
+          gh release create "${{ github.ref_name }}" --title "${{ github.ref_name }}" --notes "${NOTES}"
           
   move-tags:
     name: move tags
@@ -80,7 +79,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          fetch-tags: true
 
       - name: parse semver
         id: semver_parser 
