--- a/.github/workflows/release-init.yml
+++ b/.github/workflows/release-init.yml
@@ -1,4 +1,4 @@
-name: prepare-release
+name: release-init
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ on:
         default: 'latest'
 
 jobs:
-  prepare-release:
+  release-init:
     if: "github.ref == 'refs/heads/main'"
     name: Prepare Release
     runs-on: ubuntu-latest
