--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -1,7 +1,7 @@
 name: release-pr
 
 on:
-  pull_request:
+  pull_request:    
     branches:
       - main
 
@@ -9,27 +9,18 @@ concurrency:
   group:  ${{ github.workflow }}-${{github.event_name}}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: write
+  deployments: write
+  packages: write
+
 jobs:
   test:    
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: checkout
-        uses: actions/checkout@v4        
-
-      - id: pr
-        run: |
-          HEAD_REF=$(printf "%q" "${{ github.event.pull_request.head.ref || github.head_ref }}")
-          HEAD_REF=${HEAD_REF/refs\/heads\//}
-          echo "HEAD_REF=${HEAD_REF}"
-          RELEASE_REF=${HEAD_REF/release\//}
-          echo "RELEASE_REF=${RELEASE_REF}"
-          RELEASE_REF=${RELEASE_REF/v/}
-          echo "RELEASE_REF=${RELEASE_REF}"
-          
-          RELEASE_VERSION=${HEAD_REF/release\/v/}
-          echo "RELEASE_VERSION=${RELEASE_VERSION}"
-          echo "version=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"
+        uses: actions/checkout@v4
 
       - name: update action.yml to build locally
         run: |
@@ -77,25 +68,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: wow-actions/use-app-token@v2
-        id: likec4-bot
-        with:
-          app_id: ${{ secrets.BOT_APP_ID }}
-          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: start deployment
         uses: bobheadxi/deployments@v1
         id: deployment
         with:
           step: start
-          token: ${{ env.BOT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           env: release
 
       - name: checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ env.BOT_TOKEN }}
 
       - name: parse semver
         id: semver_parser 
@@ -104,14 +88,29 @@ jobs:
           input_string: ${{ github.event.pull_request.head.ref || github.head_ref }}
           version_extractor_regex: '\/v(.*)$'
 
+      # - id: pr
+      #   run: |
+      #     HEAD_REF=$(printf "%q" "${{ github.event.pull_request.head.ref || github.head_ref }}")
+      #     HEAD_REF=${HEAD_REF/refs\/heads\//}
+      #     echo "HEAD_REF=${HEAD_REF}"
+      #     RELEASE_REF=${HEAD_REF/release\//}
+      #     echo "RELEASE_REF=${RELEASE_REF}"
+      #     RELEASE_REF=${RELEASE_REF/v/}
+      #     echo "RELEASE_REF=${RELEASE_REF}"
+          
+      #     RELEASE_VERSION=${HEAD_REF/release\/v/}
+      #     echo "RELEASE_VERSION=${RELEASE_VERSION}"
+      #     echo "version=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"          
+
       - name: build docker
         uses: elgohr/Publish-Docker-Github-Action@v5
         with:
           name: ${{ github.repository }}
-          username: ${{ env.BOT_NAME }}
-          password: ${{ env.BOT_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           buildoptions: "--force-rm"
+          tag_names: true
           tags: "v${{ steps.semver_parser.outputs.fullversion }}"
 
       - name: update deployment status
@@ -119,7 +118,7 @@ jobs:
         if: always()
         with:
           step: finish
-          token: ${{ env.BOT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
           env: ${{ steps.deployment.outputs.env }}
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
