--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -15,12 +15,13 @@ permissions:
   packages: write
 
 jobs:
-  test:    
+  test:
+    if: startsWith(github.head_ref, 'refs/heads/release/v')
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4        
 
       - name: update action.yml to build locally
         run: |
@@ -62,7 +63,7 @@ jobs:
           ls -l mmd/
 
   deploy-package:
-    if: startsWith(github.event.pull_request.head.ref || github.head_ref, 'release/v') 
+    if: startsWith(github.head_ref, 'refs/heads/release/v')
     needs: [test]
     name: build-package
     runs-on: ubuntu-latest
@@ -75,33 +76,20 @@ jobs:
           step: start
           token: ${{ secrets.GITHUB_TOKEN }}
           env: release
-          ref: ${{ github.event.pull_request.head.ref || github.head_ref }}
+          ref: ${{ github.head_ref }}
 
       - name: checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: parse semver
-        id: semver_parser 
-        uses: booxmedialtd/ws-action-parse-semver@v1
-        with:
-          input_string: ${{ github.event.pull_request.head.ref || github.head_ref }}
-          version_extractor_regex: '\/v(.*)$'
-
-      # - id: pr
-      #   run: |
-      #     HEAD_REF=$(printf "%q" "${{ github.event.pull_request.head.ref || github.head_ref }}")
-      #     HEAD_REF=${HEAD_REF/refs\/heads\//}
-      #     echo "HEAD_REF=${HEAD_REF}"
-      #     RELEASE_REF=${HEAD_REF/release\//}
-      #     echo "RELEASE_REF=${RELEASE_REF}"
-      #     RELEASE_REF=${RELEASE_REF/v/}
-      #     echo "RELEASE_REF=${RELEASE_REF}"
-          
-      #     RELEASE_VERSION=${HEAD_REF/release\/v/}
-      #     echo "RELEASE_VERSION=${RELEASE_VERSION}"
-      #     echo "version=${RELEASE_VERSION}" >> "$GITHUB_OUTPUT"          
+      - id: release
+        name: get version
+        run: |
+          HEAD_REF=$(printf "%q" "${{ github.event.pull_request.head.ref || github.head_ref }}")
+          HEAD_REF=${HEAD_REF/release\/}
+          echo "HEAD_REF=${HEAD_REF}"
+          echo "version=${HEAD_REF}" >> "$GITHUB_OUTPUT"        
 
       - name: build docker
         uses: elgohr/Publish-Docker-Github-Action@v5
@@ -111,7 +99,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           buildoptions: "--force-rm"
-          tags: "v${{ steps.semver_parser.outputs.fullversion }}"
+          tags: "${{ steps.release.outputs.version }}"
 
       - name: update deployment status
         uses: bobheadxi/deployments@v1
